--- a/index.html
+++ b/index.html
@@ -45,13 +45,15 @@
   
       </section>
       <section class="sub-section" id="about-me">
-          <div class="information">
+        <div class="around">
+        <div class="information">
               <h2>About Me</h2>
               <p>Hello. My name is Ania Kubow. I am a Software Developer and YouTuber with a passion for teaching.</p>
           </div>
           <div class="headshot-container">
               <img class="headshot" src="Screen Shot 2022-08-04 at 10.47.00 PM.png" alt="Ania kubow headshot"/>
           </div>
+        </div>
       </section>
       <section class="sub-section-alternative" id="projects">
           <h2>Projects</h2>
