--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   
       </section>
       <section class="sub-section" id="about-me">
-        <div class="around">
+     
         <div class="information">
               <h2>About Me</h2>
               <p>Hello. My name is Ania Kubow. I am a Software Developer and YouTuber with a passion for teaching.</p>
@@ -53,7 +53,7 @@
           <div class="headshot-container">
               <img class="headshot" src="Screen Shot 2022-08-04 at 10.47.00 PM.png" alt="Ania kubow headshot"/>
           </div>
-        </div>
+       
       </section>
       <section class="sub-section-alternative" id="projects">
           <h2>Projects</h2>
@@ -87,7 +87,7 @@
                 <p class="subtext"><a class="project-link" href="https://www.github.com/kubowania">View here</a></p>
               </div>
           </div>
-      </section>
+      </section class="cont">
       <footer id="contact-me">
           <h2>Contact me</h2>
           <p>kubowania@gmail.com</p>
